--- a/templates/philosopher/activityedit.html
+++ b/templates/philosopher/activityedit.html
@@ -2,9 +2,11 @@
 
 {% block content %}
 	<div >
+	<script type="text/javascript" src="/../../../static/js/activityEdit.js"></script>
+	<script type="text/javascript" src="/../../../static/js/jquery.validate.min.js"></script>
 		<div class="row">
 			<h2 align="center">新建公益活动</h2>
-			<form class="col-md-offset-3 col-md-6" enctype="multipart/form-data" method="POST" >
+			<form class="col-md-12" id="activityEditForm" enctype="multipart/form-data" method="POST" >
 				{% csrf_token %}
 				{{ form.as_p }}
 				<button class="btn btn-primary center-btn" type="submit" >Save</button>
