--- a/templates/philosopher/applicationdetail.html
+++ b/templates/philosopher/applicationdetail.html
@@ -2,58 +2,77 @@
 
 <!--#0:pass; 1:reject; 2: wait; 3: finish; 4: failed-->
 {% block content %}
-<div>
+<div class="left-board">
+	<table>
+	<tbody>
 	{% if isOwner %}
-		<a href="/philosopher/application/delete/{{ application.id  }}">Delete</a>
-		<a href="/philosopher/application/edit/{{ application.id }}">编辑</a>
+		<tr><td><a href="/philosopher/application/delete/{{ application.id  }}" class="btn btn-warning">删除申请</a></td></tr>
+		<tr><td><a href="/philosopher/application/edit/{{ application.id }}"class="btn btn-primary">编辑</a></td></tr>
 	{% endif %}
 	{% if has_right %}
 		{% if application.apstatus == 2 %}
-		<a href="/philosopher/application/handle/1/{{ application.id }}">拒绝</a>
-		<a href="/philosopher/application/handle/2/{{ application.id }}">通过</a>
+		<tr><a href="/philosopher/application/handle/1/{{ application.id }}" class="btn btn-primary">拒绝</a></tr>
+		<tr><a href="/philosopher/application/handle/2/{{ application.id }}" class="btn btn-primary">通过</a></tr>
 		{% elif application.apstatus == 0 %}
-		<a href="/philosopher/application/handle/3/{{ application.id }}">完成</a>
-		<a href="/philosopher/application/handle/4/{{ application.id }}">未完成</a>
+		<tr><a href="/philosopher/application/handle/3/{{ application.id }}" class="btn btn-primary">完成</a></tr>
+		<tr><a href="/philosopher/application/handle/4/{{ application.id }}" class="btn btn-primary">未完成</a></tr>
 		{% endif %}
 	{% endif %}
+	</tbody>
+	</table>
+</div>
+<div class="row">
+	<div class="col-md-offset-2 col-md-8 activityContent">
+		<h1 align="center"><a href="/philosopher/activity/detail/{{ activity.id }}">{{ application }}</a></h1>
+		<table class="table table-hover table-border">
+			<tbody>
+	<!--#0:pass; 1:reject; 2: wait; 3: finish; 4: failed-->
+				<tr>
+				<td>当前状态:</td>
+				<td>
+				{% if application.apstatus == 0 %}
+				通过
+				{% elif application.apstatus == 1 %}
+				拒绝
+				{% elif application.apstatus == 2 %}
+				等待
+				{% elif application.apstatus == 3 %}
+				完成
+				{% else %}
+				未完成
+				{% endif %}
+					</td>
+				</tr>
+				<tr>
+				<td>用户ID: </td><td>{{ student.id }}</td>
+				</tr>
+				<tr>
+				<td>学校ID: </td><td>{{ student.userprofile.schoolID }}</td>
+				</tr>
+				<tr>
+				<td>用户名称: </td><td>{{ student.username }}</td>
+				</tr>
+				<tr>
+				<td>成绩:</td>
+				<td>{% if application.grade == 'a' %}大一
+				{% elif application.grade == 'b' %}大二
+				{% elif application.grade == 'c' %}大三
+				{% elif application.grade == 'd' %}大四
+				{% elif application.grade == 'e' %}研究生
+				{% elif application.grade == 'f' %}博士生
+				{% else %}错误
+				{% endif %}
+				</td>
+				</tr>
+				<tr>
+				<td>电话:</td><td> {{ application.phone }}</td>
+				</tr>
+				<tr>
+					<td>审核方回复: </td><td>{{ application.applyreason }}</td>
+				</tr>
+			</tbody>
+		</table>
+		</div>
 </div>
 
-<div>
-	<h1>activityName: <a href="/philosopher/activity/detail/{{ activity.id }}">{{ application }}</a></h1>
-</div>
-<!--#0:pass; 1:reject; 2: wait; 3: finish; 4: failed-->
-<div>
-	<p>status: 
-	{% if application.apstatus == 0 %}
-	通过
-	{% elif application.apstatus == 1 %}
-	拒绝
-	{% elif application.apstatus == 2 %}
-	等待
-	{% elif application.apstatus == 3 %}
-	完成
-	{% else %}
-	未完成
-	{% endif %}
-	</p>
-</div>
-<div>
-	<p>studentID: {{ student.id }}</p>
-	<p>schoolID: {{ student.userprofile.schoolID }}</p>
-	<p>studentName: {{ student.username }}</p>
-	<p>grade: 
-	{% if application.grade == 'a' %}大一
-	{% elif application.grade == 'b' %}大二
-	{% elif application.grade == 'c' %}大三
-	{% elif application.grade == 'd' %}大四
-	{% elif application.grade == 'e' %}研究生
-	{% elif application.grade == 'f' %}博士生
-	{% else %}错误
-	{% endif %}
-	</p>
-	<p>phone: {{ application.phone }}</p>
-</div>
-<div>
-	<p>applyReason: {{ application.applyreason }}</p>
-</div>
 {% endblock %}
