--- a/templates/philosopher/base.html
+++ b/templates/philosopher/base.html
@@ -66,7 +66,7 @@
 <div>
 	<form action="/philosopher/activity/search/" method="get" class="form-inline">
 		<div class="form-group">
-			<input type="text" name="q" size="20" value="" class="form-control" placeholder="输入活动名称或创建者"/>
+			<input type="text" name="q" size="20" value="{{ queryValue }}" class="form-control" placeholder="输入活动名称或创建者"/>
 		</div>
 		<div class="form-group">
 			<input type="submit" value="搜索" class="form-control"/>
