--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,13 +9,26 @@ a, a:hover {
 .rightContent {
   margin-top: 20px;
   padding: 20px; }
+  .rightContent .search {
+    margin-bottom: 70px; }
+    .rightContent .search form {
+      width: 100%; }
+      .rightContent .search form > div:nth-child(1) {
+        width: 75%; }
+      .rightContent .search form input {
+        width: 100%; }
+      .rightContent .search form > div:nth-child(2) {
+        width: 23%; }
   .rightContent .about_us {
     min-width: 200px; }
     .rightContent .about_us img {
       float: left;
-      width: 100px; }
+      height: 105px;
+      width: 100px;
+      border-radius: 20px;
+      margin-right: 10px; }
   .rightContent .rank {
-    margin-top: 70px; }
+    margin-top: 30px; }
     .rightContent .rank .title {
       color: lightgrey;
       font-size: 0.9em; }
@@ -57,9 +70,18 @@ body .navbar {
 .ui-dialog {
   z-index: 1001; }
 
+.footer {
+  width: 100%;
+  height: 50px;
+  background-color: lightgrey;
+  position: relative;
+  bottom: 0px;
+  color: #969696;
+  text-align: center; }
+
 #basePage img {
   width: auto;
-  height: 60px; }
+  height: 65px; }
 #basePage .title {
   color: black;
   font-size: 2.5em;
@@ -71,18 +93,26 @@ body .navbar {
   position: relative;
   left: 10px;
   top: 10px; }
-  #basePage #user-avatar{
-        border-radius: 100%;
-        width: 30px;
-        height: 30px;
-        margin-right: 6px;
-      }
+  #basePage .navbar-header #user-avatar {
+    border-radius: 100%;
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+    position: relative;
+    top: -5px; }
 #basePage a {
   text-decoration: none; }
 #basePage .login-info {
   position: absolute;
   top: 10px;
   right: 10px; }
+
+#homepagePage .activityContent .title {
+  background-color: #00BB33;
+  color: white;
+  width: 200px;
+  border-radius: 10px;
+  text-align: center; }
 
 #homepagePage .activityContent {
   margin-bottom: 20px; }
@@ -104,7 +134,7 @@ body .navbar {
   height: 25px; }
 #baseinfoPage .user-image img {
   margin-bottom: 15px;
-  width: 109px;
+  width: 100px;
   height: auto; }
 #baseinfoPage #adminInfoPage td a {
   float: right;
