--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -11,15 +11,33 @@ a,a:hover{
 .rightContent{
 	margin-top:20px;
 	padding:20px;
+	.search{
+		margin-bottom: 70px;
+		form{
+			width:100%;
+			& > div:nth-child(1){
+				width: 75%;
+			}
+			input{
+				width: 100%;
+			}
+			& > div:nth-child(2){
+				width: 23%;
+			}
+		}
+	}
 	.about_us{
 		min-width: 200px;
 		img{
 			float: left;
+			height: 105px;
 			width: 100px;
+			border-radius:20px;
+			margin-right: 10px;
 		}
 	}
 	.rank{
-		margin-top: 70px;
+		margin-top: 30px;
 		.title{
 			color: lightgrey;
 			font-size: 0.9em;
@@ -68,13 +86,22 @@ body .navbar{
 .ui-dialog{
 	z-index:1001;
 }
+.footer{
+	width: 100%;
+	height: 50px;
+	background-color: lightgrey;
+	position:relative;
+	bottom:0px;
 
+	color:rgba(150,150,150,1);
+	text-align:center;
+}
 
 //basePage
 #basePage{
 		img{
 			width: auto;
-			height: 60px;
+			height: 65px;
 		}
 		.title{
 			color: black;
@@ -88,8 +115,13 @@ body .navbar{
 			position:relative;
 			left:10px;
 			top:10px;
-			.user-avatar{
+			#user-avatar{
 				border-radius: 100%;
+				width: 30px;
+				height: 30px;
+				margin-right: 10px;
+				position:relative;
+				top:-5px;
 			}
 		}
 		a{
@@ -100,9 +132,19 @@ body .navbar{
 			top:10px;
 			right:10px;
 		}
+
+
+
 }
 //homepagePage
 #homepagePage{
+			.activityContent .title{
+			  background-color: #00BB33;
+			  color: white;
+			  width: 200px;
+			  border-radius: 10px;
+			  text-align: center;
+		}
 }
 
 #homepagePage .activityContent{
