--- a/templates/philosopher/usersignup.html
+++ b/templates/philosopher/usersignup.html
@@ -3,11 +3,9 @@
 {% block content %}
 	<div class="container" id="signupPage">
 		<div class="row">
+			<form class="col-md-6" enctype="multipart/form-data" method="POST" >
 			<h2 align="center">用户注册</h2>
-			<br>
-		</div>
-		<div class="row">
-			<form class="col-md-offset-3 col-md-6" enctype="multipart/form-data" method="POST" >
+
 				{% csrf_token %}
 				{{ userform.as_p }}
 				{{ userprofileform.as_p }}
