汉化部分资源

--- a/templates/philosopher/admininfo.html
+++ b/templates/philosopher/admininfo.html
@@ -16,7 +16,7 @@
 				<tr>
 					<td>
 						{{ student }}
-						<a href="/philosopher/accounts/info/{{ student.user.id }}">Edit..</a>
+						<a href="/philosopher/accounts/info/{{ student.user.id }}">编辑</a>
 					</td>
 				</tr>
 			{% endfor %}
@@ -32,7 +32,7 @@
 			<tr>
 				<td>
 					{{ student }}
-					<a href="/philosopher/accounts/info/{{ student.user.id }}">Edit..</a>
+					<a href="/philosopher/accounts/info/{{ student.user.id }}">编辑</a>
 				</td>
 			</tr>
 		{% endfor %}
@@ -52,7 +52,7 @@
 			<tr>
 				<td>
 					{{ organizer }}
-					<a href="/philosopher/accounts/info/{{ organizer.user.id }}">Edit..</a>
+					<a href="/philosopher/accounts/info/{{ organizer.user.id }}">编辑</a>
 				</td>
 			</tr>
 		{% endfor %}
@@ -69,7 +69,7 @@
 			<tr>
 				<td>
 					{{ organizer }}
-					<a href="/philosopher/accounts/info/{{ organizer.user.id }}">Edit..</a>
+					<a href="/philosopher/accounts/info/{{ organizer.user.id }}">编辑</a>
 				</td>
 			</tr>
 		{% endfor %}
@@ -86,7 +86,7 @@
 			<tr>
 				<td>
 					{{ organizer }}
-					<a href="/philosopher/accounts/info/{{ organizer.user.id }}">Edit..</a>
+					<a href="/philosopher/accounts/info/{{ organizer.user.id }}">编辑</a>
 				</td>
 			</tr>
 		{% endfor %}
@@ -104,7 +104,7 @@
 			<tr>
 				<td>
 					{{ administrator }}
-					<a href="/philosopher/accounts/info/{{ administrator.user.id }}">Edit..</a>
+					<a href="/philosopher/accounts/info/{{ administrator.user.id }}">编辑</a>
 				</td>
 			</tr>
 		{% endfor %}
@@ -119,7 +119,7 @@
 			<tr>
 				<td>
 					{{ activity }}
-					<a href="/philosopher/activity/detail/{{ activity.id }}">Edit..</a>
+					<a href="/philosopher/activity/detail/{{ activity.id }}">编辑</a>
 				</td>
 			</tr>
 		{% endfor %}
