--- a/templates/philosopher/homepage.html
+++ b/templates/philosopher/homepage.html
@@ -19,7 +19,7 @@
 					<p class="em06">发起者： {{ activity.atorganizer.username }}</p>
 					<p class="descripe">简介：{{ activity.atcontent|truncatechars:40 }}</p>
 					<a href="/philosopher/activity/detail/{{ activity.id }}" class="readmore">Read More..</a>
-					<p><span id="date">{{ activity.applystart }}</span></p>
+					<p><span id="date">申请开始时间：{{ activity.applystart|date:'Y年m月d日' }}</span></p>
 				</div>
 				<div class="clear"></div>
 			</div>
