--- a/templates/philosopher/baseinfo.html
+++ b/templates/philosopher/baseinfo.html
@@ -6,7 +6,7 @@
 		<div class="col-md-offset-1 col-md-8">
 			<table class="table table-hover">
 				<tr>
-				<td>ID号:</td><td> {{ nowuser.id }}</td>
+				<td>用户ID:</td><td> {{ nowuser.id }}</td>
 				</tr>
 				<tr>
 				<td>用户账号:</td><td> {{ nowuser.username }}</td>
