--- a/templates/philosopher/applicationdetail.html
+++ b/templates/philosopher/applicationdetail.html
@@ -2,7 +2,7 @@
 
 <!--#0:pass; 1:reject; 2: wait; 3: finish; 4: failed-->
 {% block content %}
-<div class="left-board">
+<div class="left-board" align="center">
 	<table>
 	<tbody>
 	{% if isOwner %}
