--- a/templates/philosopher/base.html
+++ b/templates/philosopher/base.html
@@ -102,5 +102,8 @@
 		Thanks for our great leader <b>Chen Yong rui</b> for his picture.
 	</div>
 </div>
+<div class="toTop">
+	<span class="glyphicon glyphicon-eject" aria-hidden="true"></span>
+</div>
 </body>
 </html>
