--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -97,6 +97,43 @@ body .navbar{
 	text-align:center;
 }
 
+
+
+.toTop{
+	width: 60px;
+	height: 60px;
+	border-radius:30px;
+	font-size:2.5em;
+	position:fixed;
+	bottom:10%;
+	right:15%;
+	background-color:rgba(0,0,0,0.5);
+	padding:12px;
+	padding-top:10px;
+}
+.toTop:hover{
+	background-color:rgba(0,0,0,0.2);
+}
+
+	 .hint_pic_down{
+		float:right;
+		background-image: url(../image/carat-d-black.png);
+		background-repeat: no-repeat;
+		width: 25px;
+		height: 25px;
+	}
+	 .hint_pic_up{
+		float:right;
+		background-image: url(../image/carat-u-black.png);
+		background-repeat: no-repeat;
+		width: 25px;
+		height: 25px;
+	}
+
+.font-orange{
+	color:orange;
+}
+
 //basePage
 #basePage{
 		img{
@@ -134,7 +171,6 @@ body .navbar{
 		}
 
 
-
 }
 //homepagePage
 #homepagePage{
@@ -166,20 +202,7 @@ body .navbar{
 
 //baseInfoPage
 #baseinfoPage{
-	h5 .hint_pic_down{
-		float:right;
-		background-image: url(../image/carat-d-black.png);
-		background-repeat: no-repeat;
-		width: 25px;
-		height: 25px;
-	}
-	h5 .hint_pic_up{
-		float:right;
-		background-image: url(../image/carat-u-black.png);
-		background-repeat: no-repeat;
-		width: 25px;
-		height: 25px;
-	}
+
 	.user-image{
 		img{
 			margin-bottom: 15px;
@@ -205,7 +228,14 @@ body .navbar{
 			width: 100%;
 		}
 	}
+
 }
+
+	#queneDialog{
+			a:hover{
+				color: darkblue;
+			}
+	}
 
 //activityEditPage
 #activityEditPage{
@@ -256,8 +286,8 @@ body .navbar{
 @media screen{
 	.left-board{
 		border:1px solid rgb(198,224,237);
-		border-radius:20px;
-		background-color: rgb(210,235,229);
+		border-radius:10px;
+		background-color: #e7e7e7;
 		width:10%;
 		position:fixed;
 		top:30%;
@@ -274,8 +304,8 @@ body .navbar{
 @media screen and (max-width:1000px){
 	.left-board{
 		border:1px solid rgb(198,224,237);
-		border-radius:20px;
-		background-color: rgb(210,235,229);
+		border-radius:10px;
+		background-color: #e7e7e7;
 		width:100%;
 		position:relative;
 		left:30px;
