--- a/templates/philosopher/applicationdetail.html
+++ b/templates/philosopher/applicationdetail.html
@@ -68,7 +68,7 @@
 				<td>电话:</td><td> {{ application.phone }}</td>
 				</tr>
 				<tr>
-					<td>审核方回复: </td><td>{{ application.applyreason }}</td>
+					<td>申请原因: </td><td>{{ application.applyreason }}</td>
 				</tr>
 			</tbody>
 		</table>
