--- a/templates/philosopher/base.html
+++ b/templates/philosopher/base.html
@@ -101,7 +101,7 @@
 		© Copyright 2015
 	</div>
 	<div>
-		Powerby <a href="http://chenyvehtung.github.io" target="_blank">Donald</a>, <a href="https://github.com/KevinChen073" target="_blank">Kevin</a>, <a href="http://weibo.com/u/2721089860" target="_blank">Even</a>, <a href="http://120.24.169.4/" target="_blank">Richard</a>.
+		Powerby <a href="http://chenyvehtung.github.io" target="_blank">Donald</a>, <a href="https://github.com/KevinChen073" target="_blank">Kevin</a>, <a href="http://weibo.com/u/2721089860" target="_blank">Even</a>, <a href="http://120.24.169.4/" target="_blank">Richard</a>, <a href="https://github.com/sophietian1024" target="_blank">Sophie</a>.
 	</div>
 </div>
 <div class="toTop">
